--- a/.github/workflows/fork_checker.yml
+++ b/.github/workflows/fork_checker.yml
@@ -14,7 +14,7 @@ jobs:
         strategy:
           fail-fast: false
           matrix:
-            branches: [rolling]
+            branches: [iron, rolling]
         steps:
           - name: Check
             id: check
